--- a/Polaread-Extension/Resources/popup.html
+++ b/Polaread-Extension/Resources/popup.html
@@ -137,7 +137,7 @@
             <button class="arrow left" data-type="fontWeight" data-direction="left">
               <img src="images/left-arrow.png" alt="Left Arrow">
             </button>
-            <span id="fontWeightText">Regular</span>
+            <span id="fontWeightText">Standard</span>
             <button class="arrow right" data-type="fontWeight" data-direction="right">
               <img src="images/right-arrow.png" alt="Right Arrow">
             </button>
@@ -149,7 +149,7 @@
 
   <button id="savePreference" class="action-button grey" style="display: flex; align-items: center; justify-content: center; color: black;">
       <img src="images/save-icon.png" alt="Save Icon" style="width: 14px; height: 16px; margin-right: 6px;">
-      Save this preference
+      save this preference
   </button>
 
   <script src="popup.js"></script>
